Added responsive styling using media queries
Co-authored-by: Spencer Moody <spencer.moody@outlook.com>
Co-authored-by: Nikolas Kososik <nikolas.kososik@gmail.com>

--- a/css/styles.css
+++ b/css/styles.css
@@ -20,3 +20,14 @@
   font-family: sans-serif;
 }
 
+@media screen and (max-width: 480px) {
+  .column {
+    width: 100%;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  .column {
+    width: 50%;
+  }
+}
